--- a/html/practice.html
+++ b/html/practice.html
@@ -30,10 +30,10 @@
 <body>
 <!--1. 로그인 화면-->
     <form action="#">
-        <h1>로그인</h1>
+        <h1>로그인2</h1>
         <p>
-            <input type="text" name="id" id="id" placeholder="아이디">
-            <input type="password" name="pw" id="pw" placeholder="비밀번호">
+            <input type="text" name="id" id="id" placeholder="아이디" aria-label="아이디">
+            <input type="password" name="pw" id="pw" placeholder="비밀번호" aria-label="비밀번호">
             <button type="submit">
                 로그인
             </button>
