강의 실습 코드, HTML 실습 코드 Commit

--- a/html/form.html
+++ b/html/form.html
@@ -12,7 +12,7 @@
 <body>
     <form action="#">
         <fieldset>
-            <legend>input의 종류2</legend>
+            <legend>input의 종류</legend>
             <input type="text" aria-label="">
             <input type="submit">
             <input type="password" aria-label="">
