html, css, javascript 사용, keydown 이벤트, box 이동하기

--- a/html/javascript_day3/javascript_pratice.html
+++ b/html/javascript_day3/javascript_pratice.html
@@ -12,6 +12,8 @@
             margin:0;
         }
         .container {
+            position:relative;
+            overflow:hidden;
             background-color: #ffd4d4;
             height:100vh;
         }
